--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -18,7 +18,7 @@
 @font-face {
     font-family: 'avenir', sans-serif;
     src: url('../assets/fonts/AvenirNextLTPro-Bold.otf');
-    font-weight: 600;
+    font-weight: 700;
     font-style: normal;
 }
 
